Finish readme.md

--- a/index.html
+++ b/index.html
@@ -61,16 +61,13 @@
             <!-- Game selection section -->
             <section id="game-area">
                 <h3 class="hide">Game Area</h3>
-                <div id="game-btn-bhp" data-game="power-game" class="bhp-game game-box game-btn"
-                    aria-label="Click me to play higher or lower break horse power game">
+                <div id="game-btn-bhp" data-game="power-game" class="bhp-game game-box game-btn">
                     <h3 class="game-overlay">Higher or lower bhp</h3>
                 </div>
-                <div id="game-btn-speed" data-game="topspeed-game" class="topspeed-game game-box game-btn"
-                    aria-label="Click me to play higher or lower top speed game">
+                <div id="game-btn-speed" data-game="topspeed-game" class="topspeed-game game-box game-btn">
                     <h3 class="game-overlay">Higher or lower top speed</h3>
                 </div>
-                <div id="game-btn-price" data-game="price-game" class="price-game game-box game-btn"
-                    aria-label="Click me to play higher or lower car price game">
+                <div id="game-btn-price" data-game="price-game" class="price-game game-box game-btn">
                     <h3 class="game-overlay">Higher or lower price</h3>
                 </div>
             </section>
