Fix all small issues left

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <h3 class="hide">Game Screen</h3>
             <section id="prev-car">
                 <h3 class="hide">Previous Car</h3>
-                <img src="placeholder" alt="Car image">
+                <img src="assets/images/placeholdermicra.jpeg" alt="Car image">
                 <div class="overlay">
                     <!-- Name of the car will be inserted here when the game is started -->
                     <p></p>
@@ -105,7 +105,7 @@
             <p id="score">Score: 0</p>
             <section id="next-car">
                 <h3 class="hide">Next Car</h3>
-                <img src="placeholder" alt="Car image">
+                <img src="assets/images/placeholdermicra.jpeg" alt="Car image">
                 <div class="overlay">
                     <p></p>
                     <p class="power"></p>
@@ -117,7 +117,7 @@
         <!-- Wrong answer menu to access main menu or play again -->
         <nav id="game-end-menu" class="game-end-menu">
             <h3 class="hide">Failed Screen</h3>
-            <img id="game-end-img" src="assets/images/jeremyclarksonimage.jpeg" alt="Image of Jeremy Clarkson disappointed">
+            <img id="game-end-img" src="assets/images/clarksondissappointed.png" alt="Image of Jeremy Clarkson disappointed">
             <div class="overlay-menu">
                 <p id="final-score"></p>
                 <button id="play-again-btn">Play Again</button>
